// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<WidgetContextMenuView /> > renders widget contextmenu with all options 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-controls="radix-_r_1_"
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="context menu trigger button"
    class="_icon-button_1215g_8"
    data-kind="primary"
    data-state="open"
    id="radix-_r_0_"
    inert=""
    role="button"
    style="--cpd-icon-button-size: 24px;"
    tabindex="-1"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17"
      style="--cpd-icon-button-size: 100%;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<WidgetContextMenuView /> > renders widget contextmenu without only basic modification 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <button
    aria-controls="radix-_r_b_"
    aria-disabled="false"
    aria-expanded="true"
    aria-haspopup="menu"
    aria-label="context menu trigger button"
    class="_icon-button_1215g_8"
    data-kind="primary"
    data-state="open"
    id="radix-_r_a_"
    inert=""
    role="button"
    style="--cpd-icon-button-size: 24px;"
    tabindex="-1"
    type="button"
  >
    <div
      class="_indicator-icon_147l5_17"
      style="--cpd-icon-button-size: 100%;"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
        />
      </svg>
    </div>
  </button>
</div>
`;
